# zk-bench

./: .gitignore  BENCHMARKS.md  README.md  benchmarks.py
benchmarks/: BENCHMARKS.md  bench_results.json  bench_results.txt  benchmarks.py  setup_all.sh
benchmarks/r9-5900x-32gb-2x3090/: bench_results.json  bench_results.txt
cairo/doubleMerkle/: Scarb.toml  input.json
cairo/doubleMerkle/src/: double_merkle.cairo  lib.cairo
cairo/merkle/: README.md  Scarb.toml  input.json  package.json
cairo/merkle/scripts/: visualize_tree.js
cairo/merkle/src/: merkle.cairo
circom/merkle/: .gitignore  README.md  input.json  input_double.json  package.json
circom/merkle/circuits/: doubleMerkle.circom  merkle.circom
circom/merkle/scripts/: generate_double_input.js  generate_input.js  visualize_tree.js
jolt/doubleMerkle/: Cargo.toml
jolt/doubleMerkle/guest/: Cargo.toml
jolt/doubleMerkle/src/: main.rs
jolt/merkle/: Cargo.toml  README.md
jolt/merkle/guest/src/: lib.rs
jolt/merkle/scripts/: visualize_tree.js
jolt/merkle/src/: main.rs
leo/doubleMerkle/: .env  program.json
leo/doubleMerkle/src/: main.leo
leo/merkle/: README.md  program.json
leo/merkle/scripts/: visualize_tree.js
leo/merkle/src/: main.leo
leo/merkle/tests/: test_merkle.leo
noirlang/doubleMerkle/: Nargo.toml  Prover.toml
noirlang/doubleMerkle/src/: main.nr
noirlang/merkle/: Nargo.toml  Prover.toml  README.md
noirlang/merkle/scripts/: visualize_tree.js
noirlang/merkle/src/: main.nr
powdr/doubleMerkle/: Cargo.toml
powdr/doubleMerkle/guest/: Cargo.toml
powdr/doubleMerkle/src/: main.rs
powdr/merkle/: Cargo.toml  README.md  rust-toolchain.toml
powdr/merkle/guest/: Cargo.toml
powdr/merkle/scripts/: visualize_tree.js
risc0/doubleMerkle/: Cargo.toml
sp1/doubleMerkle/: Cargo.toml
sp1/doubleMerkle/script/: Cargo.toml
sp1/quantumCircuit/: README.md  verify_quantum_proof.sh
zokrates/merkle/: README.md  package.json
(+30 files in other folders)
