[package]
version = "0.1.0"
name = "double-merkle-script"
edition = "2021"
default-run = "double-merkle"

[[bin]]
name = "double-merkle"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { version = "6.0.1", features = ["blocking"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
hex = "0.4.3"
double-merkle-lib = { path = "../lib" }
bincode = "1.3"

[build-dependencies]
sp1-build = { version = "6.0.1" }
